--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
     </div>
 
     <!-- ============================================ -->
-    <!--                   LANDIN                    -->
+    <!--                   LANDING                    -->
     <!-- ============================================ -->
 
     <section id="hero">
@@ -160,8 +160,65 @@
 
     <section id="contact-section" class="section">
       <div class="container">
-        <div class="left-section"></div>
-        <div class="right-section"></div>
+        <div class="left-section">
+          <div class="contact-box">
+            <div class="contact-element">Call: (760)855-5579</div>
+            <div class="contact-element">Email: raincitywebsites@gmail.com</div>
+            <p>
+              For the best results, use this form to have the appropriate team
+              member get in touch.
+            </p>
+          </div>
+        </div>
+        <div class="right-section">
+          <form class="form-flex">
+            <div class="form-element-half">
+              <label for="name">Name</label><br />
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="What's your name?"
+              />
+            </div>
+            <div class="form-element-half">
+              <label for="lname">Email</label><br />
+              <input
+                type="text"
+                id="email"
+                name="email"
+                placeholder="Email address?"
+              />
+            </div>
+            <div class="form-element-half">
+              <label for="name">Phone Number</label><br />
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Phone Number?"
+              />
+            </div>
+            <div class="form-element-half">
+              <label for="lname">Website</label><br />
+              <input
+                type="text"
+                id="email"
+                name="email"
+                placeholder="Current Site?"
+              />
+            </div>
+            <div class="form-element-full">
+              <label for="lname">Describe your project</label><br />
+              <input
+                type="text"
+                id="email"
+                name="email"
+                placeholder="Current Site?"
+              />
+            </div>
+          </form>
+        </div>
       </div>
     </section>
 
