--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <link rel="canonical" href="" />
 
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Rain City Websites specializes in hand-coded small business websites. Our team of experienced developers is dedicated to creating professional, user-friendly websites that help your business thrive online. From custom design to search engine optimization, we have the skills and expertise to bring your online vision to life. Contact us today to learn more and see how we can help your small business succeed online."
+    />
     <meta name="keywords" content="" />
 
     <!-- CSS -->
@@ -255,7 +258,11 @@
     <section id="portfolio" class="section">
       <div class="container">
         <div class="left-section">
-          <a href="services.html" class="portfolio-link" id="mouse-link">
+          <a
+            href="https://www.cakecannabis.com/"
+            class="portfolio-link"
+            id="mouse-link"
+          >
             <div class="title">CAKE CANNABIS</div>
             <div class="description">
               Cake Cannabis is a celebration of Washington grown cannabis. They
