more contact elements

--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,7 @@
         <div class="right-section">
           <form class="form-flex">
             <div class="form-element-half">
-              <label for="name">Name</label><br />
+              <label for="name">Name *</label><br />
               <input
                 type="text"
                 id="name"
@@ -182,7 +182,7 @@
               />
             </div>
             <div class="form-element-half">
-              <label for="lname">Email</label><br />
+              <label for="lname">Email *</label><br />
               <input
                 type="text"
                 id="email"
@@ -209,7 +209,7 @@
               />
             </div>
             <div class="form-element-full">
-              <label for="lname">Describe your project</label><br />
+              <label for="lname">Describe your project *</label><br />
               <input
                 type="text"
                 id="email"
