More contact form styles

--- a/contact.html
+++ b/contact.html
@@ -248,6 +248,7 @@
                 placeholder="How can we help?"
               ></textarea>
             </div>
+            <input type="submit" value="SUBMIT FORM" />
           </form>
         </div>
       </div>
