--- a/contact.html
+++ b/contact.html
@@ -204,7 +204,12 @@
           </div>
         </div>
         <div class="right-section">
-          <form class="form-flex">
+          <form
+            class="form-flex"
+            name="contact"
+            method="POST"
+            data-netlify="true"
+          >
             <div class="form-element-half">
               <label for="name">Name *</label><br />
               <input
