Mobile responsiveness added to contact section

--- a/contact.html
+++ b/contact.html
@@ -194,12 +194,13 @@
       <div class="container">
         <div class="left-section">
           <div class="contact-box">
-            <div class="contact-element">CALL: (760)855-5579</div>
-            <div class="contact-element">EMAIL: raincitywebsites@gmail.com</div>
+            <div class="contact-element">(760) 855-5579</div>
+            <div class="contact-element">RAINCITYWEBSITES@GMAIL.COM</div>
             <p>
               For the best results, use this form to have the appropriate team
               member get in touch.
             </p>
+
             <img src="/images/icons8-circled-right-100.png" />
           </div>
         </div>
