About page mobile repsonsiveness

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="overlay-content">
         <div class="overlay-nav">
           <div class="navbar-overlay">
-            <a href="/"><span id="blue">RAIN </span> CITY</a>
+            <a href="index.html"><span id="blue">RAIN </span> CITY</a>
           </div>
           <span class="closebtn" onclick="closeNav()">&times;</span>
         </div>
