Landing page styling

--- a/index.html
+++ b/index.html
@@ -218,12 +218,13 @@
           <p>
             We specialize in small business web design and development for
             clients anywhere in the US. Every line of code is written by hand to
-            ensure the best performance.
+            ensure the best performance, which helps bring in more customers to
+            your site and bring more revenue to your business.
           </p>
           <p>
             We work with you to design, manage and implement innovative
             solutions that meet the business needs and address the challenges of
-            growth.
+            growth. We look forward to hearing from you!
           </p>
           <!--
           <div class="hero-button">
@@ -460,7 +461,7 @@
               width="14%"
             />
             <div class="pricing-box">
-              <div class="pricing-title">Web Design & Development</div>
+              <div class="pricing-title">Design & Development</div>
               <p>Includes over 40 hours of design, development, and testing.</p>
               <hr />
             </div>
