Expanding on services section, added pricing

--- a/services.html
+++ b/services.html
@@ -324,8 +324,10 @@
             <div class="right">
               <div class="header">DISCOVERY</div>
               <p>
-                Good designs stand the test of time. Work closely with us to
-                ensure that you are satisfied with the design of the project.
+                Amazing projects start by being well thought out from the
+                beginning. Amazing projects start by being well thought out from
+                the beginning. Work closely with us to ensure that you are
+                satisfied with the design of the project.
               </p>
             </div>
           </div>
@@ -334,8 +336,10 @@
             <div class="right">
               <div class="header">DESIGN</div>
               <p>
-                Good designs stand the test of time. Work closely with us to
-                ensure that you are satisfied with the design of the project.
+                Amazing projects start by being well thought out from the
+                beginning. Amazing projects start by being well thought out from
+                the beginning. Work closely with us to ensure that you are
+                satisfied with the design of the project.
               </p>
             </div>
           </div>
@@ -344,8 +348,10 @@
             <div class="right">
               <div class="header">DEVELOPMENT</div>
               <p>
-                Good designs stand the test of time. Work closely with us to
-                ensure that you are satisfied with the design of the project.
+                Amazing projects start by being well thought out from the
+                beginning. Amazing projects start by being well thought out from
+                the beginning. Work closely with us to ensure that you are
+                satisfied with the design of the project.
               </p>
             </div>
           </div>
@@ -362,6 +368,7 @@
                 call may be scheduled with you if we have any follow-up
                 questions.
               </p>
+              <div class="process-label">Discovery / 01</div>
             </div>
             <div class="right-section-element">
               <div class="header">CONTRACT REVIEW</div>
@@ -370,7 +377,10 @@
                 timeline, and budget proposal, we will send over a service
                 agreement for you to review and e-sign. At this time, we will
                 also sign NDAs for your project if we discussed them beforehand.
+                A further discovery call may be scheduled with you if we have
+                any follow-up questions.
               </p>
+              <div class="process-label">Discovery / 02</div>
             </div>
           </div>
           <div class="block">
@@ -384,6 +394,7 @@
                 call may be scheduled with you if we have any follow-up
                 questions.
               </p>
+              <div class="process-label">Design / 01</div>
             </div>
             <div class="right-section-element">
               <div class="header">REVIEWS & REVISIONS</div>
@@ -395,6 +406,7 @@
                 sign off on the final design. This finalized design then moves
                 on to development.
               </p>
+              <div class="process-label">Design / 02</div>
             </div>
           </div>
           <div class="block">
@@ -408,6 +420,7 @@
                 in mind. You will be able to follow the whole development phase
                 with demo links provided by your project manager.
               </p>
+              <div class="process-label">Development / 01</div>
             </div>
             <div class="right-section-element">
               <div class="header">SEO OPTIMIZATIONS</div>
@@ -419,6 +432,7 @@
                 custom development, every page will be structured for your
                 ease-of-use in mind.
               </p>
+              <div class="process-label">Development / 02</div>
             </div>
           </div>
         </div>
@@ -521,6 +535,62 @@
         <div class="right-section-mobile"></div>
       </div>
     </div>
+
+    <!-- ============================================ -->
+    <!--                   PRICING                    -->
+    <!-- ============================================ -->
+    <div id="section-title">
+      <div class="container">
+        <div class="left-section">What It Costs</div>
+        <div class="right-section">PRICING</div>
+      </div>
+    </div>
+
+    <section id="pricing">
+      <div class="container">
+        <div class="pricing-section">
+          <div class="header">BASIC</div>
+          <hr />
+          <div class="header">$150 / monthly</div>
+          <div class="desc">What's included</div>
+          <ul>
+            <li><img src="/images/icons8-done.svg" />Unlimited Edits</li>
+            <li><img src="/images/icons8-done.svg" />Hosting included</li>
+            <li><img src="/images/icons8-done.svg" />24/5 Customer Service</li>
+            <li><img src="/images/icons8-done.svg" />Lifetime Updates</li>
+          </ul>
+          <button>GET STARTED</button>
+        </div>
+        <div class="middle-section">
+          <div class="header">PRO</div>
+          <hr />
+          <div class="header">$300 / monthly</div>
+          <div class="desc">What's included</div>
+          <ul>
+            <li><img src="/images/icons8-done.svg" />Unlimited Edits</li>
+            <li><img src="/images/icons8-done.svg" />Hosting included</li>
+            <li><img src="/images/icons8-done.svg" />24/5 Customer Service</li>
+            <li><img src="/images/icons8-done.svg" />Lifetime Updates</li>
+            <li><img src="/images/icons8-done.svg" />Blog Pages</li>
+          </ul>
+          <button>GET STARTED</button>
+        </div>
+        <div class="pricing-section">
+          <div class="header">CUSTOM</div>
+          <hr />
+          <div class="header">Custom Pricing</div>
+          <div class="desc">What's included</div>
+          <ul>
+            <li><img src="/images/icons8-done.svg" />Unlimited Edits</li>
+            <li><img src="/images/icons8-done.svg" />Hosting included</li>
+            <li><img src="/images/icons8-done.svg" />24/5 Customer Service</li>
+            <li><img src="/images/icons8-done.svg" />Lifetime Updates</li>
+            <li><img src="/images/icons8-done.svg" />Blog Pages</li>
+          </ul>
+          <button>GET STARTED</button>
+        </div>
+      </div>
+    </section>
 
     <!-- ============================================ -->
     <!--                   FOOTER                     -->
