Completed responsive blog page

--- a/blog.html
+++ b/blog.html
@@ -176,124 +176,196 @@
     <section id="blog" class="section">
       <div class="container">
         <div class="left-section">
-          <div class="categories">
-            <div class="header">CATEGORIES</div>
-            <div class="category-element">
-              <img src="images/news-icon.svg" />
-              <div class="category-header">News</div>
+          <div class="sticky-elements">
+            <div class="title">CATEGORIES</div>
+            <div class="link">
+              <div class="cl-effect-5-body">
+                <a href="services.html">
+                  <span data-hover="INSIGHTS">INSIGHTS</span>
+                </a>
+              </div>
             </div>
-            <div class="category-element">
-              <img src="images/project-management-icon.svg" />
-              <div class="category-header">Project Management</div>
+            <div class="link">
+              <div class="cl-effect-5-body">
+                <a href="services.html">
+                  <span data-hover="ARTICLES">ARTICLES</span>
+                </a>
+              </div>
             </div>
-            <div class="category-element">
-              <img src="images/design-icon.svg" />
-              <div class="category-header">Design</div>
+            <div class="link">
+              <div class="cl-effect-5-body">
+                <a href="services.html">
+                  <span data-hover="TUTORIALS">TUTORIALS</span>
+                </a>
+              </div>
             </div>
-            <div class="category-element">
-              <img src="images/development-icon.svg" />
-              <div class="category-header">Development</div>
+            <div class="link">
+              <div class="cl-effect-5-body">
+                <a href="services.html">
+                  <span data-hover="SHOW ALL">SHOW ALL</span>
+                </a>
+              </div>
             </div>
-            <div class="category-element">
-              <img src="images/all-icon.svg" />
-              <div class="category-header">All</div>
+            <div class="contact">
+              <div class="cl-effect-5-body">
+                <a href="services.html"
+                  ><span data-hover="CONTACT US">CONTACT US</span></a
+                >
+                <img src="/images/icons8-circled-right-100.png" />
+              </div>
             </div>
           </div>
         </div>
         <div class="right-section">
-          <div class="blog-page-element">
+          <a
+            class="blog-page-element"
+            href="/insights/advantages-of-developing-your-own-website.html"
+          >
             <div class="left">
-              <div class="icon"><img src="images/development-icon.svg" /></div>
-            </div>
-            <div class="right">
-              <div class="sub-header">11.22.2022 Bryan Moore</div>
               <div class="header">
                 Advantages of Developing your own Website
               </div>
-              <p>
-                The discovery call is an introductory meeting that helps us get
-                to know you and understand your business, business goals,
-                objectives, budget, and timeline. During this call, we will
-                scope your project to see how we can help. A further discovery
-                call may be scheduled with you if we have any follow-up
-                questions.
-              </p>
-            </div>
-          </div>
-          <div class="blog-page-element">
-            <div class="left">
-              <div class="icon"><img src="images/design-icon.svg" /></div>
-            </div>
-            <div class="right">
-              <div class="sub-header">11.22.2022 Bryan Moore</div>
-              <div class="header">Optimizing Images for the Web</div>
-              <p>
-                The discovery call is an introductory meeting that helps us get
-                to know you and understand your business, business goals,
-                objectives, budget, and timeline. During this call, we will
-                scope your project to see how we can help. A further discovery
-                call may be scheduled with you if we have any follow-up
-                questions.
-              </p>
-            </div>
-          </div>
-          <div class="blog-page-element">
-            <div class="left">
-              <div class="icon">
-                <img src="images/project-management-icon.svg" />
+              <div class="sub-header">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
               </div>
             </div>
             <div class="right">
-              <div class="sub-header">11.22.2022 Bryan Moore</div>
-              <div class="header">How to Drive Traffic to your Website</div>
               <p>
                 The discovery call is an introductory meeting that helps us get
                 to know you and understand your business, business goals,
-                objectives, budget, and timeline. During this call, we will
-                scope your project to see how we can help. A further discovery
-                call may be scheduled with you if we have any follow-up
-                questions.
+                objectives, budget, and timeline.
               </p>
+              <div class="sub-header-mobile">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
+              </div>
             </div>
-          </div>
-          <div class="blog-page-element">
+          </a>
+          <a
+            class="blog-page-element"
+            href="/insights/why-every-business-needs-a-website.html"
+          >
             <div class="left">
-              <div class="icon">
-                <img src="images/project-management-icon.svg" />
+              <div class="header">Why Every Business <br />needs a Website</div>
+              <div class="sub-header">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
               </div>
             </div>
             <div class="right">
-              <div class="sub-header">11.22.2022 Bryan Moore</div>
+              <p>
+                During this call, we will scope your project to see how we can
+                help. A further discovery call may be scheduled with you if we
+                have any follow-up questions.
+              </p>
+              <div class="sub-header-mobile">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
+              </div>
+            </div>
+          </a>
+          <a
+            class="blog-page-element"
+            href="/insights/how-to-drive-traffic-to-your-website.html"
+          >
+            <div class="left">
               <div class="header">
-                Benefits of a Professional Business Website
+                How to Drive Traffic <br />to your Website
               </div>
-              <p>
-                The discovery call is an introductory meeting that helps us get
-                to know you and understand your business, business goals,
-                objectives, budget, and timeline. During this call, we will
-                scope your project to see how we can help. A further discovery
-                call may be scheduled with you if we have any follow-up
-                questions.
-              </p>
-            </div>
-          </div>
-          <div class="blog-page-element">
-            <div class="left">
-              <div class="icon"><img src="images/development-icon.svg" /></div>
+              <div class="sub-header">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
+              </div>
             </div>
             <div class="right">
-              <div class="sub-header">11.22.2022 Bryan Moore</div>
-              <div class="header">SEO Strategies for Today and Tomorrow</div>
               <p>
                 The discovery call is an introductory meeting that helps us get
                 to know you and understand your business, business goals,
-                objectives, budget, and timeline. During this call, we will
-                scope your project to see how we can help. A further discovery
-                call may be scheduled with you if we have any follow-up
-                questions.
+                objectives, budget, and timeline.
               </p>
+              <div class="sub-header-mobile">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
+              </div>
             </div>
-          </div>
+          </a>
+          <a
+            class="blog-page-element"
+            href="/insights/beginers-guide-to-google-analytics.html"
+          >
+            <div class="left">
+              <div class="header">
+                Beginners Guide to <br />Google Analytics
+              </div>
+              <div class="sub-header">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
+              </div>
+            </div>
+            <div class="right">
+              <p>
+                During this call, we will scope your project to see how we can
+                help. A further discovery call may be scheduled with you if we
+                have any follow-up questions.
+              </p>
+              <div class="sub-header-mobile">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
+              </div>
+            </div>
+          </a>
+          <a
+            class="blog-page-element"
+            href="/insights/seo-strategies-for-small-businesses.html"
+          >
+            <div class="left">
+              <div class="header">
+                SEO Strategies for<br />
+                Small Businesses
+              </div>
+              <div class="sub-header">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
+              </div>
+            </div>
+            <div class="right">
+              <p>
+                The discovery call is an introductory meeting that helps us get
+                to know you and understand your business, business goals,
+                objectives, budget, and timeline.
+              </p>
+              <div class="sub-header-mobile">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
+              </div>
+            </div>
+          </a>
+          <a
+            class="blog-page-element"
+            href="/insights/how-to-optimize-a-website-for-mobile.html"
+          >
+            <div class="left">
+              <div class="header">
+                How to Optimize a Website For Mobile Devices
+              </div>
+              <div class="sub-header">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
+              </div>
+            </div>
+            <div class="right">
+              <p>
+                During this call, we will scope your project to see how we can
+                help. A further discovery call may be scheduled with you if we
+                have any follow-up questions.
+              </p>
+              <div class="sub-header-mobile">
+                LEARN MORE
+                <img src="/images/noun-arrow.svg" />
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </section>
