--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       }
     </script>
 
-    <title>Rain City Websites</title>
+    <title>Rain City Websites - Small Business Web Development</title>
   </head>
   <body>
     <!--  <div class="transition transition-3 is-active"></div> -->
